--- a/style.css
+++ b/style.css
@@ -35,6 +35,47 @@ header {
     padding: 20px;
 }
 
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+.card {
+    border: 2px solid #FFF;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    text-align: center;
+}
+
+
+.image-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e8f7d9;
+    border-radius: 15px;
+    margin: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    max-width: 400px;
+}
+
+.image-card img {
+    width: 100%;
+    height: auto;
+}
+
+.about img {
+    display: flex !important;
+
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -80,6 +121,11 @@ header {
 }
 
 .contact-text a {
+    text-decoration: underline;
+    color: #333;
+}
+
+.text-section a {
     text-decoration: underline;
     color: #333;
 }
@@ -267,10 +313,15 @@ footer {
         font-size: 24px;
     } */
     .contact-text {
-        padding: 10px 40px 10px 40px;
-        margin: 20px 50px 20px 50px;
-        min-width: 400px;
+        padding: 5px 20px 5px 20px !important;
+        margin: 15px 20px 10px 20px !important;
+        min-width: 100px !important;
     }
+
+    .map iframe {
+        height: 300px;
+    }
+
 
     .container {
         grid-template-columns: 1fr 1fr;
@@ -316,11 +367,11 @@ footer {
 }
 
 
-
 @media screen and (max-width: 1150px) {
     .contact-text {
         padding: 10px 40px 10px 40px;
-        margin: 50px 80px 50px 80px;
+        margin: 20px 40px 20px 40px;
+        border: none;
     }
 
     .container {
@@ -341,9 +392,10 @@ footer {
 
     .txt {
         border: 2px solid #FFF;
-        padding: 2px;
+        padding: 7px;
         border-radius: 30px;
         margin-bottom: 25px;
+        margin-top: 10px;
     }
 
     .image-section {
